<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">


    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/rb_home_bottom"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_home_selector"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_find_bottom"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_find_selector"
            android:text="@string/find" />

        <RadioButton
            android:id="@+id/rb_me_bottom"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_me_selector"
            android:text="@string/my" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/fl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_group"></FrameLayout>
</RelativeLayout>
