<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/home_top_pic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <LinearLayout style="@style/homeLinearLayout">

            <ImageView
                android:id="@+id/iv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/violation_cheek" />

            <TextView
                style="@style/textMode"
                android:text="@string/violationCheek" />
        </LinearLayout>

        <LinearLayout style="@style/homeLinearLayout">

            <ImageView
                android:id="@+id/iv_gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/gas_station" />

            <TextView
                style="@style/textMode"
                android:text="@string/gasStation" />
        </LinearLayout>

        <LinearLayout style="@style/homeLinearLayout">

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/clear_car" />

            <TextView
                style="@style/textMode"
                android:text="@string/nearbyClearCar" />
        </LinearLayout>

        <LinearLayout style="@style/homeLinearLayout">

            <ImageView
                android:id="@+id/iv_road"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/height_speed_road" />

            <TextView
                style="@style/textMode"
                android:text="@string/heightSpeedRoad" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_cars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:paddingBottom="20dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="二手放心车"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ii"
                    android:layout_marginTop="10dp"
                    android:text="精选海量可靠车源"
                    android:textColor="#999999"
                    android:textSize="11sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/used_car" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#fff"
            android:paddingBottom="20dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="维修保养"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_text"
                    android:layout_marginTop="10dp"
                    android:text="靠得住的养车服务"
                    android:textColor="#999999"
                    android:textSize="11sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/maintenance" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingTop="15dp">
            <TextView
                android:id="@+id/v"
                android:layout_width="3dp"
                android:layout_height="13dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="15dp"
                android:background="#0f97ee" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/v"
                android:paddingTop="0dp"
                android:layout_marginLeft="15dp"
                android:text="新闻资讯"
                android:textColor="#888888"
                android:textSize="13sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="更多"
                android:textColor="#0f97ee"
                android:textSize="13sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                />
        </RelativeLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:listSelector="@android:color/transparent"
            android:id="@+id/lv_news_list"></ListView>
    </LinearLayout>

</LinearLayout>